2003-09-28  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips-protos.h (mips16_gp_pseudo_reg): Remove.
	* config/mips/mips.h (LEGITIMATE_CONSTANT_P): Remove orphaned comment.
	* config/mips/mips.c (mips_reloc_offset_ok_p): New function.
	(mips_classify_constant): Use it.
	(mips_splittable_symbol_p): Add an offset argument.
	(mips_classify_address): Adjust call accordingly.
	(mips_legitimize_symbol): Handle sdata references with LO_SUM rather
	than a relocation unspec.  Update call to mips_splittable_symbol_p.
	Generalize the code that copes with symbols + invalid offsets.
	(print_operand): Allow '%R' to be applied to small data addresses.
	(mips_reloc_string): Remove RELOC_GPREL16.
	(mips_sdata_pointer): Renamed from mips16_gp_pseudo_reg.  Return $gp
	for TARGET_EXPLICIT_RELOCS.  Return null if we can't use gp-relative
	relocation operators.
	* config/mips/mips.md (RELOC_GPREL16): Remove.  Shuffle other reloc
	constants accordingly.

2003-09-27  Roger Sayle  <roger@eyesopen.com>

	* toplev.c (flag_evaluation_order): New global variable.
	* flags.h (flag_evaluation_order): Prototype here.
	* expr.c (expand_operands): If we need to preserve observable
	evaluation order, protect exp1 from clobbering exp0's result.

2003-09-28  Andreas Jaeger  <aj@suse.de>

	* c-decl.c (finish_function): Convert definition to ISO C90.
	* ifcvt.c (mark_loop_exit_edges): Likewise.
	* ra-rewrite.c (emit_colors): Likewise.

2003-09-27  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc (alpha*-dec-osf[45]*): Disable fixproto.
	* config.gcc (arm*-*-uclinux*): Disable fixproto.
	* config.gcc (powerpc-*-eabispe*, powerpc-*-eabisimaltivec*,
	powerpc-*-eabialtivec*): Disable fixproto.

2003-09-27  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/12340
	* loop.h (struct induction): Document the new semantics
	of the 'same' field for bivs.
	* unroll.c (biv_total_increment): Don't count the same
	biv increment several times.
	(loop_iterations) [GENERAL_INDUCT]: Likewise.